--- a/web/src/sass/dream.scss
+++ b/web/src/sass/dream.scss
@@ -1,3 +1,11 @@
-body {
+html,body {
 	background-color: #eee;
+	margin:0;
+	padding:0;
+	width: 100%;
+	height: 100%;
+}
+
+canvas {
+	display: block;
 }
