--- a/web/src/sass/dream.scss
+++ b/web/src/sass/dream.scss
@@ -37,6 +37,6 @@ canvas {
 	position: fixed;
 	right: 0;
 	top: 0;
-	background: rgba(255,255,255,0.8)
+	background: rgba(255,255,255,0.8);
 	cursor: pointer;
 }
