--- a/web/src/sass/dream.scss
+++ b/web/src/sass/dream.scss
@@ -1,3 +1,5 @@
+$fontColor: #eee;
+
 @mixin clearfix {
   &:after {
     content: "";
@@ -13,6 +15,7 @@ html,body {
 	width: 100%;
 	height: 100%;
 	font-family: 'Open Sans', sans-serif;
+	color: $fontColor;
 }
 
 canvas {
@@ -40,6 +43,7 @@ canvas {
 	top: 0;
 	background: rgba(255,255,255,0.8);
 	cursor: pointer;
+	z-index: 10;
 }
 
 .tweetText {
@@ -47,5 +51,4 @@ canvas {
 	bottom: 0;
 	left: 0;
 	background-color: rgba(0,0,0,0.4);
-	color: white;
 }
