--- a/web/src/sass/dream.scss
+++ b/web/src/sass/dream.scss
@@ -22,6 +22,12 @@ canvas {
 	display: block;
 }
 
+.debug {
+	position: absolute;
+	z-index: 12;
+	background: black;
+	width: 100%;
+}
 .debug .closed {
 	display: none;
 }
