--- a/web/src/sass/dream.scss
+++ b/web/src/sass/dream.scss
@@ -56,5 +56,8 @@ canvas {
 	position: absolute;
 	bottom: 0;
 	left: 0;
-	background-color: rgba(0,0,0,0.4);
+	background-color: rgba(0,0,0,0.6);
+}
+.tweetText a {
+	color: white;
 }
